# ChangeLog for dev-dotnet/libgdiplus
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/libgdiplus/ChangeLog,v 1.94 2009/04/06 14:31:55 ranger Exp $

  06 Apr 2009; Brent Baude <ranger@gentoo.org> libgdiplus-2.2.ebuild:
  Marking libgdiplus-2.2 ~ppc for bug 255410

  04 Apr 2009; Markus Meier <maekke@gentoo.org> libgdiplus-2.0.ebuild:
  amd64/x86 stable, bug #234305

*libgdiplus-2.4 (30 Mar 2009)

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> +libgdiplus-2.4.ebuild:
  Bump to mono-2.4 version.

*libgdiplus-2.2 (18 Jan 2009)

  18 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> -libgdiplus-1.9.ebuild,
  +libgdiplus-2.2.ebuild:
  Bump to 2.2, bug 254929.

  24 Nov 2008; Peter Alfredsen <loki_val@gentoo.org> libgdiplus-2.0.ebuild:
  Go eapi-2, we won't go stable any sooner anyway. Drop imglibs patch, since
  it was causing unnecessary trouble. Choice is not always good. This ebuild
  seems to be in shape for getting unmasked.

*libgdiplus-2.0 (19 Nov 2008)

  19 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  -libgdiplus-1.2.2.ebuild, -libgdiplus-1.2.3.ebuild,
  -libgdiplus-1.2.5.ebuild, -libgdiplus-1.2.5-r1.ebuild,
  +libgdiplus-2.0.ebuild:
  Bump for mono-2, remove crufty slag.

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org> libgdiplus-1.9.ebuild:
  Added check whether x11-libs/cairo has been built with X USE flag enabled

  01 Jun 2008; Jurek Bartuszek <jurek@gentoo.org> libgdiplus-1.2.4.ebuild,
  libgdiplus-1.9.ebuild:
  Fixed newer autoconf versions handling (bugs #217355 #224335)

*libgdiplus-1.9 (31 May 2008)

  31 May 2008; Jurek Bartuszek <jurek@gentoo.org> +libgdiplus-1.9.ebuild:
  Version bump (bug #213381)

  18 Apr 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  libgdiplus-1.2.2.ebuild, libgdiplus-1.2.3.ebuild, libgdiplus-1.2.4.ebuild,
  libgdiplus-1.2.5.ebuild, libgdiplus-1.2.5-r1.ebuild:
  Fix a few quoting issues

  18 Apr 2008; Saleem Abdulrasool <compnerd@gentoo.org>