@@ -4,6 +4,7 @@ DIST libgdiplus-2.2.tar.bz2 1972197 RMD160 69e0675ba1971f61c569be0f13f067f589e36
 DIST libgdiplus-2.4.tar.bz2 2035314 RMD160 02d5e1b7d928606157551c3a51de331c931498e2 SHA1 c462f6284084e799225961a9ee727d2c5b0249fe SHA256 822c7c23e8066a3339e100be1da19411a153113dfa6309aaa9a91952f6bcc021
 EBUILD libgdiplus-2.0.ebuild 1378 RMD160 6ac70e331f7123dd335b570ec62a5a4fd0614f17 SHA1 2e70b7b80d0292c562096aa4130e1bdcf88aaa9e SHA256 24a8195756b933c46914d07c03b49a3e9f4ca93a4b8218298a226136eaff2919
 EBUILD libgdiplus-2.2.ebuild 1075 RMD160 dbcef474a53d15c0eac9ba576d8bbb383a7fd8d5 SHA1 cba220d9d34b396662423b4b6b3f8a229d630be8 SHA256 ca3ee73e4e11b0731297a0b7c3d1a13ca2a857be55a8c290b54d977192b8730c
+EBUILD libgdiplus-2.4.9999.ebuild 1326 RMD160 c95fc86016a7b5d581feffa72300c81b9175d1eb SHA1 bfe34c2677f8d9d67df243f5997678d59320c9f2 SHA256 a43d29054ab6bcb08cf38f014e51629e87aa38e2b2b92cbf886f03e925e91317
 EBUILD libgdiplus-2.4.ebuild 1077 RMD160 a126686ac3e22c2633326d3fc1725f23e221ec97 SHA1 2c2fa8d07ede81c62716156babb36f4997cdb45a SHA256 4e156866beef4fcb07463e9659c56b07cce1ec76c84a2e36b9013a2db525d76b
-MISC ChangeLog 15403 RMD160 32f6ddd9b4392f0710f27f20847e1f1d59b45c37 SHA1 1bcaa9ed1b6543565b1b19a87adff102e63d42a3 SHA256 27810a7ca12972bd6ecf64a57bf6a20891c15abe941e5e6a8cbfdce320d90757
+MISC ChangeLog 15760 RMD160 89b4603ffabe73d3cc7f00b6f660e7e379d010b0 SHA1 e8943a57631541184e5f7dfa4cf80437f6df630e SHA256 80d1fadaafba313bdabc17f18af416f06f3efa3e2384cc0f29cbd53f4159bf64
 MISC metadata.xml 246 RMD160 c049a364d331203a1fbf6d9796e74abe79307a26 SHA1 4d2431d4bf0e6eb30006d5033ab6ab75aa0d55bd SHA256 8dcd2a872f353f47b9647d9dbff0ea4ead52425af362279057e94b89e0b7fc81
